helm/my-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-configmap-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
      - name: config
        mountPath: "/etc/nginx/conf.d"
  volumes:
  - name: config
    configMap:
      name: my-configmap
